httpbin-local-ratelimit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-local-ratelimit
  labels:
    istio-injection: enabled
